--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     -->
     <title>Chat Kodala</title>
   </head>
-  <body>
+  <body style="background-color: black;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
