Implement Bundle Size Optimization

--- a/embed-example.html
+++ b/embed-example.html
@@ -35,7 +35,7 @@
   </style>
 
   <!-- Load the chat widget script -->
-  <script src="./dist/chat-widget.umd.js"></script>
+  <script src="./dist/widget.js"></script>
   <script>
     // Wait for DOM to be ready and script to load
     document.addEventListener('DOMContentLoaded', function () {
